--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,27 @@
 version: "3.2"
 services:
 
-  app:
-    image: ${IMAGE}:${IMAGE_VER}
+  nextcloud:
+    image: ${NEXTCLOUD_IMAGE}:${NEXTCLOUD_IMAGE_VER}
     restart: always
     networks:
-      - lan
+      - dcape
+    links:
+      - redis
+    depends_on:
+      - redis
     labels:
       - "traefik.enable=true"
       - "traefik.frontend.rule=Host:${APP_SITE}"
+      - "traefik.frontend.entryPoints=http,https"
+      - "traefik.frontend.redirect.entryPoint=https"
+      - "traefik.frontend.headers.STSSeconds=15552000"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
     volumes:
-      - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ../../data/nextcloud:/var/www/html
+      - ../../data/${APP_SITE}/var/www/html:/var/www/html
+      - ../../data/${APP_SITE}/etc/apache2:/etc/apache2
     environment:
       - POSTGRES_DB=${DB_USER}
       - POSTGRES_USER=${DB_USER}
@@ -22,7 +31,27 @@ services:
       - NEXTCLOUD_ADMIN_PASSWORD=${USER_PASS}
       - NEXTCLOUD_TRUSTED_DOMAINS=${APP_SITE}
 
+
+  redis:
+    image: ${REDIS_IMAGE}:${REDIS_IMAGE_VER}
+    restart: always
+    networks:
+      - dcape
+    volumes:
+      - ../../data/${APP_SITE}/var/lib/redis:/var/lib/redis
+
+  onlyoffice:
+    image: ${ONLYOFFICE_IMAGE}:${ONLYOFFICE_IMAGE_VER}
+    restart: always
+    networks:
+      - dcape
+    labels:
+      - "traefik.enable=true"
+      - "traefik.frontend.rule=Host:${ONLYOFFICE_APP_SITE}"
+      - "traefik.frontend.entryPoints=http,https"
+      - "traefik.frontend.redirect.entryPoint=https"
+
 networks:
-  lan:
+  dcape:
     external:
       name: ${DCAPE_NET}
