--- a/nginx.conf
+++ b/nginx.conf
@@ -24,16 +24,19 @@ http {
 
     keepalive_timeout  65;
 
-    set_real_ip_from  10.0.0.0/8;
-    set_real_ip_from  172.16.0.0/12;
-    set_real_ip_from  192.168.0.0/16;
-    set_real_ip_from  100.127.0.0/24;
-    real_ip_header    X-Real-IP;
+    real_ip_header X-Forwarded-For;
+    set_real_ip_from router;
 
     #gzip  on;
 
     upstream php-handler {
         server cloud-app:9000;
+    }
+
+    # Set the `immutable` cache control options only for assets with a cache busting `v` argument
+    map $arg_v $asset_immutable {
+        "" "";
+        default "immutable";
     }
 
     server {
@@ -76,7 +79,8 @@ http {
 
         # The following rule is only needed for the Social app.
         # Uncomment it if you're planning to use this app.
-        rewrite ^/.well-known/webfinger /public.php?service=webfinger last;
+        rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
+        rewrite ^/.well-known/nodeinfo /public.php?service=nodeinfo last;
 
         # set max upload size
         client_max_body_size 10G;
