--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
     #gzip  on;
 
     upstream php-handler {
-        server cloud-app:9000;
+        server cloud:9000;
     }
 
     # Set the `immutable` cache control options only for assets with a cache busting `v` argument
