--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -16,6 +16,7 @@ pipeline:
     image: *dcape_img
     commands:
       - make .config-link
+      - make setup
       - make .default-deploy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
