--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.2"
 services:
 
   front:
@@ -12,15 +11,14 @@ services:
       - traefik.http.routers.${APP_TAG}-front.rule=Host(`${APP_SITE:?Must be set}`)
       - traefik.http.routers.${APP_TAG}-front.tls=${USE_TLS}
       - traefik.http.routers.${APP_TAG}-front.tls.certresolver=letsEncrypt
-      - traefik.http.middlewares.${APP_TAG}_redirect.redirectregex.regex=/.well-known/(card|cal)dav
-      - traefik.http.middlewares.${APP_TAG}_redirect.redirectregex.replacement=/remote.php/dav/
       # hsts middleware defined in DCAPE/apps/traefik/docker-compose.inc.yml
-      - traefik.http.routers.cloud-front.middlewares=hsts,${APP_TAG}_redirect
+      - traefik.http.routers.${APP_TAG}-front.middlewares=hsts
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ${APP_ROOT}/data:/var/www/html:ro
-      - ${APP_ROOT}/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ${APP_ROOT}/html:/var/www/html:ro
+      - ${APP_ROOT}/data:${DATA_DIR}:ro
+      - ${APP_ROOT}/etc/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
 
   app:
     image: ${IMAGE}:${IMAGE_VER}
@@ -33,7 +31,10 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ${APP_ROOT}/data:/var/www/html
+      - ${APP_ROOT}/html:/var/www/html
+      - ${APP_ROOT}/data:${DATA_DIR}
+      - ${APP_ROOT}/config:/var/www/html/config
+      - ${APP_ROOT}/etc/php-fpm.d/zz-docker.conf:/usr/local/etc/php-fpm.d/zz-docker.conf:ro
     environment:
       - POSTGRES_DB=${PGDATABASE}
       - POSTGRES_USER=${PGUSER}
@@ -42,6 +43,7 @@ services:
       - NEXTCLOUD_ADMIN_USER=${USER_NAME}
       - NEXTCLOUD_ADMIN_PASSWORD=${USER_PASS}
       - NEXTCLOUD_TRUSTED_DOMAINS=${APP_SITE}
+      - NEXTCLOUD_DATA_DIR=${DATA_DIR}
       - OVERWRITEPROTOCOL=https
       - TRUSTED_PROXIES=${DCAPE_SUBNET}
       - REDIS_HOST=${APP_TAG}-cache
